--- a/oci/provision-vm-large/cloud-init-sip.yaml
+++ b/oci/provision-vm-large/cloud-init-sip.yaml
@@ -1,5 +1,6 @@
 #cloud-config
-# Cloud-init configuration for jambonz SBC server on OCI
+# Cloud-init configuration for jambonz SIP server on OCI (Large deployment)
+# Handles Drachtio and SIP-related applications only (no RTPEngine)
 
 package_update: false
 package_upgrade: false
@@ -17,14 +18,14 @@ write_files:
       REDIS_HOST="${redis_host}"
       REDIS_PORT="${redis_port}"
       JWT_SECRET="${jwt_secret}"
-      WEB_MONITORING_PRIVATE_IP="${web_monitoring_private_ip}"
+      MONITORING_PRIVATE_IP="${monitoring_private_ip}"
       VPC_CIDR="${vpc_cidr}"
       ENABLE_PCAPS="${enable_pcaps}"
+      RTP_PRIVATE_IPS="${rtp_private_ips}"
 
-      echo "Starting jambonz SBC server configuration for OCI deployment"
+      echo "Starting jambonz SIP server configuration for OCI large deployment"
 
       # Detecting the Linux distribution
-      # Oracle Linux uses ID="ol", RHEL uses ID="rhel"
       if grep -q 'ID="ol"' /etc/os-release 2>/dev/null || grep -q 'ID="rhel"' /etc/os-release 2>/dev/null || grep -q 'ID=ol' /etc/os-release 2>/dev/null || grep -q 'ID=rhel' /etc/os-release 2>/dev/null; then
           DEFAULT_USER=admin
 
@@ -40,7 +41,6 @@ write_files:
       HOME=/home/jambonz
 
       # Copy SSH authorized_keys from opc user to jambonz user
-      # OCI only adds SSH keys to the opc user by default
       if [ -f /home/opc/.ssh/authorized_keys ] && [ -d /home/jambonz ]; then
           echo "Copying SSH keys from opc to jambonz user..."
           mkdir -p /home/jambonz/.ssh
@@ -50,26 +50,51 @@ write_files:
           chmod 600 /home/jambonz/.ssh/authorized_keys
       fi
 
-      sudo systemctl stop rtpengine || true
       sudo systemctl stop drachtio || true
 
       # Get instance metadata from OCI IMDS v2
       echo "Getting instance metadata from OCI IMDS..."
       PRIVATE_IP=$(curl -s -H "Authorization: Bearer Oracle" http://169.254.169.254/opc/v2/vnics/ 2>/dev/null | jq -r '.[0].privateIp' 2>/dev/null || hostname -I | awk '{print $1}')
       INSTANCE_ID=$(curl -s -H "Authorization: Bearer Oracle" http://169.254.169.254/opc/v2/instance/id 2>/dev/null || hostname)
+      PUBLIC_IP=$(curl -s -H "Authorization: Bearer Oracle" http://169.254.169.254/opc/v2/vnics/ 2>/dev/null | jq -r '.[0].publicIp' 2>/dev/null || curl -s https://api.ipify.org 2>/dev/null || echo "")
 
       echo "Private IP: $PRIVATE_IP"
-      echo "Instance ID: $INSTANCE_ID"
-
-      # Get the public IP (already assigned via Terraform)
-      PUBLIC_IP=$(curl -s -H "Authorization: Bearer Oracle" http://169.254.169.254/opc/v2/vnics/ 2>/dev/null | jq -r '.[0].publicIp' 2>/dev/null || curl -s https://api.ipify.org 2>/dev/null || echo "")
       echo "Public IP: $PUBLIC_IP"
+      echo "Instance ID: $INSTANCE_ID"
+      echo "RTP Private IPs: $RTP_PRIVATE_IPS"
+
+      # Build RTP engines connection string (IP:port format)
+      RTPENGINES=""
+      IFS=',' read -ra RTP_IPS <<< "$RTP_PRIVATE_IPS"
+      for i in "$${!RTP_IPS[@]}"; do
+          IP="$(echo "$${RTP_IPS[$i]}" | tr -d ' ')"
+          if [ -n "$IP" ]; then
+              if [ -n "$RTPENGINES" ]; then
+                  RTPENGINES="$RTPENGINES,$IP:22222"
+              else
+                  RTPENGINES="$IP:22222"
+              fi
+          fi
+      done
+
+      echo "RTPEngines connection string: $RTPENGINES"
+
+      # Wait for Redis to be available
+      echo "Waiting for Redis at $REDIS_HOST:$REDIS_PORT..."
+      for i in $(seq 1 60); do
+          if redis-cli -h $REDIS_HOST -p $REDIS_PORT ping 2>/dev/null | grep -q PONG; then
+              echo "Redis is available"
+              break
+          fi
+          echo "Redis not yet available, attempt $i/60..."
+          sleep 10
+      done
 
       # Configure drachtio service
-      sudo sed -i -e "s/MYSQL_HOST=/MYSQL_HOST=$MYSQL_HOST/g" /etc/systemd/system/drachtio.service
-      sudo sed -i -e "s/MYSQL_USER=/MYSQL_USER=$MYSQL_USER/g" /etc/systemd/system/drachtio.service
-      sudo sed -i -e "s/MYSQL_PASSWORD=/MYSQL_PASSWORD=$MYSQL_PASSWORD/g" /etc/systemd/system/drachtio.service
-      sudo sed -i -e "s/MYSQL_DATABASE=/MYSQL_DATABASE=jambones/g" /etc/systemd/system/drachtio.service
+      sudo sed -i -e "s/JAMBONES_MYSQL_HOST=/JAMBONES_MYSQL_HOST=$MYSQL_HOST/g" /etc/systemd/system/drachtio.service
+      sudo sed -i -e "s/JAMBONES_MYSQL_USER=/JAMBONES_MYSQL_USER=$MYSQL_USER/g" /etc/systemd/system/drachtio.service
+      sudo sed -i -e "s/JAMBONES_MYSQL_PASSWORD=/JAMBONES_MYSQL_PASSWORD=$MYSQL_PASSWORD/g" /etc/systemd/system/drachtio.service
+      sudo sed -i -e "s/JAMBONES_MYSQL_DATABASE=/JAMBONES_MYSQL_DATABASE=jambones/g" /etc/systemd/system/drachtio.service
       sudo sed -i -e "s/JAMBONES_REDIS_HOST=/JAMBONES_REDIS_HOST=$REDIS_HOST/g" /etc/systemd/system/drachtio.service
       sudo sed -i -e "s/JAMBONES_REDIS_PORT=/JAMBONES_REDIS_PORT=$REDIS_PORT/g" /etc/systemd/system/drachtio.service
 
@@ -103,7 +128,7 @@ write_files:
             JAMBONES_MYSQL_CONNECTION_LIMIT: 10,
             JAMBONES_REDIS_HOST: '$REDIS_HOST',
             JAMBONES_REDIS_PORT: $REDIS_PORT,
-            JAMBONES_TIME_SERIES_HOST: '$WEB_MONITORING_PRIVATE_IP',
+            JAMBONES_TIME_SERIES_HOST: '$MONITORING_PRIVATE_IP',
             ENABLE_METRICS: 1,
             STATS_HOST: '127.0.0.1',
             STATS_PORT: 8125,
@@ -111,30 +136,6 @@ write_files:
             STATS_TELEGRAF: 1,
             STATS_SAMPLE_RATE: 1,
             JAMBONES_NETWORK_CIDR: '$VPC_CIDR'
-          }
-        },
-        {
-          name: 'sbc-rtpengine-sidecar',
-          cwd: '$HOME/apps/sbc-rtpengine-sidecar',
-          script: 'app.js',
-          instance_var: 'INSTANCE_ID',
-          out_file: '$HOME/.pm2/logs/sbc-rtpengine-sidecar.log',
-          err_file: '$HOME/.pm2/logs/sbc-rtpengine-sidecar.log',
-          exec_mode: 'fork',
-          instances: 1,
-          autorestart: true,
-          watch: false,
-          max_memory_restart: '1G',
-          env: {
-            LOGLEVEL: 'info',
-            DTMF_ONLY: true,
-            RTPENGINE_DTMF_LOG_PORT: 22223,
-            ENABLE_METRICS: 1,
-            STATS_HOST: '127.0.0.1',
-            STATS_PORT: 8125,
-            STATS_PROTOCOL: 'tcp',
-            STATS_SAMPLE_RATE:1,
-            STATS_TELEGRAF: 1
           }
         },
         {
@@ -182,7 +183,7 @@ write_files:
             JAMBONES_NETWORK_CIDR: '$VPC_CIDR',
             JAMBONES_RTPENGINE_INJECT_DTMF_ALWAYS: 0,
             JAMBONES_RTPENGINE_UDP_PORT: 6000,
-            JAMBONES_RTPENGINES: '127.0.0.1:22222',
+            JAMBONES_RTPENGINES: '$RTPENGINES',
             MIN_CALL_LIMIT: 9999,
             RTPENGINE_PING_INTERVAL: 30000,
             DRACHTIO_HOST: '127.0.0.1',
@@ -195,7 +196,7 @@ write_files:
             JAMBONES_MYSQL_CONNECTION_LIMIT: 10,
             JAMBONES_REDIS_HOST: '$REDIS_HOST',
             JAMBONES_REDIS_PORT: $REDIS_PORT,
-            JAMBONES_TIME_SERIES_HOST: '$WEB_MONITORING_PRIVATE_IP',
+            JAMBONES_TIME_SERIES_HOST: '$MONITORING_PRIVATE_IP',
             JAMBONES_TRACK_ACCOUNT_CALLS: 0,
             JAMBONES_TRACK_SP_CALLS: 0,
             JAMBONES_TRACK_APP_CALLS: 0,
@@ -225,7 +226,7 @@ write_files:
             JAMBONES_NETWORK_CIDR: '$VPC_CIDR',
             JAMBONES_RTPENGINE_INJECT_DTMF_ALWAYS: 0,
             JAMBONES_RTPENGINE_UDP_PORT: 7000,
-            JAMBONES_RTPENGINES: '127.0.0.1:22222',
+            JAMBONES_RTPENGINES: '$RTPENGINES',
             DRACHTIO_HOST: '127.0.0.1',
             DRACHTIO_PORT: 9022,
             DRACHTIO_SECRET: 'cymru',
@@ -238,7 +239,7 @@ write_files:
             JAMBONES_MYSQL_CONNECTION_LIMIT: 10,
             JAMBONES_REDIS_HOST: '$REDIS_HOST',
             JAMBONES_REDIS_PORT: $REDIS_PORT,
-            JAMBONES_TIME_SERIES_HOST: '$WEB_MONITORING_PRIVATE_IP',
+            JAMBONES_TIME_SERIES_HOST: '$MONITORING_PRIVATE_IP',
             ENABLE_METRICS: 1,
             JAMBONES_TRACK_ACCOUNT_CALLS: 0,
             JAMBONES_TRACK_SP_CALLS: 0,
@@ -258,32 +259,27 @@ write_files:
 
       echo "Restarting telegraf"
       # Configure telegraf to send to the monitoring server
-      sudo sed -i -e "s/influxdb:8086/$WEB_MONITORING_PRIVATE_IP:8086/g" /etc/telegraf/telegraf.conf
+      sudo sed -i -e "s/influxdb:8086/$MONITORING_PRIVATE_IP:8086/g" /etc/telegraf/telegraf.conf
       sudo systemctl restart telegraf
 
-      # Point rtpengine to the HEP endpoint on the monitoring server
+      # Point drachtio to the HEP endpoint on the monitoring server
       if [[ "$ENABLE_PCAPS" == "true" ]]; then
         echo "Enabling PCAPs"
-        sudo sed -i -e "s/--delete-delay 0/--delete-delay 0 --homer=$WEB_MONITORING_PRIVATE_IP:9060 --homer-protocol=udp --homer-id=11/g" /etc/systemd/system/rtpengine.service
-        sudo sed -i -e "s/--address 0.0.0.0 --port 9022/--address 0.0.0.0 --port 9022 --homer $WEB_MONITORING_PRIVATE_IP:9060 --homer-id 10/g" /etc/systemd/system/drachtio.service
+        sudo sed -i -e "s/--address 0.0.0.0 --port 9022/--address 0.0.0.0 --port 9022 --homer $MONITORING_PRIVATE_IP:9060 --homer-id 10/g" /etc/systemd/system/drachtio.service
       fi
 
-      # Point drachtio to the HEP endpoint on the monitoring server
-      sudo sed -i "s/--homer 127.0.0.1:9060/--homer $WEB_MONITORING_PRIVATE_IP:9060/g" /etc/systemd/system/drachtio.service
+      sudo sed -i "s/--homer 127.0.0.1:9060/--homer $MONITORING_PRIVATE_IP:9060/g" /etc/systemd/system/drachtio.service
 
       sudo systemctl daemon-reload
-      sudo systemctl restart rtpengine
       sudo systemctl restart drachtio
 
       echo "Starting jambonz apps"
-      sudo -u $USER bash -c "pm2 restart $HOME/apps/ecosystem.config.js"
+      sudo -u $USER bash -c "pm2 start $HOME/apps/ecosystem.config.js"
       sudo env PATH=$PATH:/usr/bin /usr/lib/node_modules/pm2/bin/pm2 startup systemd -u $USER --hp $HOME
       sudo -u $USER bash -c "pm2 save"
       sudo systemctl enable pm2-$USER.service
 
-      # Configure APIBan - supports two modes:
-      # 1. Client credentials mode: auto-provision unique key per instance (preferred)
-      # 2. Single key mode: use customer-provided key
+      # Configure APIBan
       APIBAN_KEY="${apiban_key}"
       APIBAN_CLIENT_ID="${apiban_client_id}"
       APIBAN_CLIENT_SECRET="${apiban_client_secret}"
@@ -307,9 +303,9 @@ write_files:
           echo "Skipping APIBan configuration (no credentials provided)"
       fi
 
-      echo "SBC server setup complete!"
+      echo "SIP server setup complete!"
 
 runcmd:
   - /tmp/jambonz-setup.sh > /var/log/jambonz-setup.log 2>&1
 
-final_message: "jambonz SBC cloud-init configuration complete after $UPTIME seconds"
+final_message: "jambonz SIP server cloud-init configuration complete after $UPTIME seconds"
